[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Player/PlayerCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Levels/Level0_0.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ColorOverlay.gd" type="Script" id=6]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
main_path = "/root/Game"

[node name="LevelHolder" type="Node2D" parent="."]
pause_mode = 1

[node name="Level0_0" parent="LevelHolder" instance=ExtResource( 5 )]

[node name="Overlay" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="InGameMenus" type="Control" parent="Overlay"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="Overlay"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" parent="Overlay/UI" instance=ExtResource( 2 )]
visible = false
margin_left = -20.0
margin_top = -20.0
margin_right = 780.0
margin_bottom = 580.0

[node name="ColorOverlay" type="ColorRect" parent="Overlay"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerCamera" parent="." instance=ExtResource( 4 )]
pause_mode = 1
player_path = "/root/Game/Player/PlayerBody"
